# InstaOrder

./: .gitmodules  CMakeLists.txt  README.md  bloomfilter.cpp  bloomfilter.h  countdownwidget.cpp  countdownwidget.h  countdownwidget.ui  jdhelper.cpp  jdhelper.h  jdorderconfig.cpp  jdorderconfig.h  jdorderconfig.ui  keyvalidator.cpp  keyvalidator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderhelper.h  orderinfo.h  pageLoadCallbacks.h  qrcodedialog.cpp  qrcodedialog.h  qrcodedialog.ui  resources.qrc  urls.h
.github/workflows/: windows-build.yml
JDscripts/: order.js
common/: spinner.html
jquery/: jquery-3.7.0.min.js
